fix : home main container alignment

--- a/CSS/home.css
+++ b/CSS/home.css
@@ -20,6 +20,7 @@
 }
 h1 {
   font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
 .search-container {
   display: flex;
@@ -77,13 +78,14 @@ select {
 }
 
 main {
-  padding: 0 1rem;
+  padding: 0 2rem;
 }
 .topics {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-content: flex-start;
+  gap: 2rem;
 
   width: 100%;
   height: 100%;
@@ -100,7 +102,7 @@ main {
   background-color: var(--bg_default);
   width: 16.5rem;
   height: 20rem;
-  margin: 1rem;
+
   border-radius: 0.7rem;
   box-shadow: rgba(99, 99, 99, 0.09) 0px 2px 8px 0px;
 }
